--- a/0x01-NoSQL/.gitignore
+++ b/0x01-NoSQL/.gitignore
@@ -1,1 +1,8 @@
-__pycache__` folder.  This is a cache of the compiled bytecode for the Python files.  It is safe to delete this folder, and it will be recreated the next time you run the program.  This is a common way to fix problems with Python programs.
+__pycache__
+8-main.py
+9-main.py
+10-main.py
+11-main.py
+12-main.py
+101-main.py
+102-main.py
